# mott-h-drive-email

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  send_usage_emails.py
.github/workflows/: build.yml
openshift/: full_config.yaml
utils/: constants.py  email_generator.py  test_email_generator.py
