[tool.poetry]
name = "h-drive-email"
version = "0.1.0"
description = ""
authors = ["Evan <evan.harley@gov.bc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
pandas = "^2.2.3"
ldap3 = "^2.9.1"
plotly = "^5.24.1"
python-dotenv = "^1.0.1"
nslookup = "^1.8.1"
openpyxl = "^3.1.5"
streamlit = "^1.40.2"
tqdm = "^4.67.1"

[tool.poetry.packages]
include = ["*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
